--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
     <div class="featurette">
       <img class="img-circle pull-right" src="images/shing.jpg">
       <h2 class="featurette-heading" style="color:#ffffff; font-family: '微軟正黑體';">年輕學長<span class="text-muted">1號</span></h2>
-      <p class="lead">In simple terms, a responsive web design figures out what resolution of device it's being served on. Flexible grids then size correctly to fit the screen.</p>
+      <p class="lead">目前是大學三年級資工系學生，在大二期間跟著老師做研究，大部分都是專業在影像處理部分，曾經到台北參加過比賽也得到還不錯的名次。在這次的比賽中讓我嘗試到不同的領域，而我在團隊裡負責是後端API的製作。會有這個製作主題的想法是因為家是人們的避風港，在外漂泊多年的浪子都想回到一個溫暖的家，但天有不測風雨而又該如何防範危機，所以想透過這次的比賽，做出能讓人們可以保衛家園的作品出來，利用各個政府所提供的Open Data，做出彙整，有系統的處理，讓人更加能夠放心居家安全這個區塊。</p>
     </div>
 
     <hr class="featurette-divider">
